--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    ".eslintrc.js", // 包括 ESLint 配置文件的路径
+    "postcss.config.ts",
+    "tailwind.config.ts",
+    "vite.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
