chore: 修改lint:script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./",
+    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet src/",
     "lint:style": "stylelint --fix \"src/**/*.{css,scss}\""
   },
   "lint-staged": {
