--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "commit": "cz",
     "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet src/",
     "lint:style": "stylelint --fix \"src/**/*.{css,scss}\""
   },
@@ -36,7 +37,9 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
     "commitlint": "^17.6.5",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -62,5 +65,10 @@
     "typescript": "*",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
