--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "dependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "antd": "^5.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reset-css": "^5.0.1",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
@@ -62,7 +65,6 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "*",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1"
   },
